--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,7 @@ dl,dt,dd{
 }
 ul{list-style:none;padding:0;margin-top:0;}
 a{color:#d5d5d5;}
+
 a[href],a.js-serv{
 	color:#a1d404;
 	text-decoration:none;
@@ -45,24 +46,26 @@ a[href],a.js-serv{
 	a[href]:active,a.js-serv:active{
 		color:#999;
 		}
-
+a[href='javascript:void(0)']{
+	border-bottom-style:dashed;
+}
 
 a.js-serv,
 a.bbcode_artist,
 a.bbcode_tag{
 	cursor:pointer;
 	text-decoration:none;
-	border-bottom:1px dashed #647142;
+	border-bottom:1px dashed #647142  !important;
 	}
 	a.js-serv:hover,
 	a.bbcode_artist:hover,
 	a.bbcode_tag:hover{
-		border-bottom-color:#a1d404;
+		border-bottom-color:#a1d404  !important;
 		}
 	a.js-serv:active,
 	a.bbcode_artist:active,
 	a.bbcode_tag:active{
-		border-bottom-color:#999;
+		border-bottom-color:#999  !important;
 		}
 
 
@@ -97,7 +100,7 @@ a.bbcode_tag{
 .needs-cross-domain{
 	display:none;
 }
-.js-cross-domain-allowed .needs-cross-domain{
+.cross-domain-allowed .needs-cross-domain{
 	display:block;
 }
 
@@ -348,12 +351,13 @@ display:none;
 		overflow:hidden;
 		display:block;
 	}
-#search-desciption{
-	margin-top:0;
+.search-desc{
 	padding-left:60px;
 	font-size:0.9em;
 	color:#999;
+	margin-top:0;
 }
+
 #update-star{
 	position:absolute;
 	left:15px;
@@ -379,6 +383,10 @@ display:none;
 .balun {
 	display:block;
 	position: absolute;
+	background-color:#ddd;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
 	width: 100%;
 	padding:10px;
 }
@@ -390,38 +398,6 @@ display:none;
 			color:#333;
 			border-bottom-color:#333;
 		}
-	.bal {
-		position: absolute;
-		background: url(../i/corners.png) no-repeat;
-		z-index: -1;
-	}
-    .tl {
-      top: -6px;
-      bottom: 28px;
-      left: -11px;
-      right: 14px;
-    }
-    .tr {
-      width: 25px;
-      top: -6px;
-      bottom: 28px;
-      right: -11px;
-      background-position: top right;
-    }
-    .bl {
-      left: -11px;
-      right: 14px;
-      bottom: 0;
-      height: 28px;
-      background-position: bottom left;
-    }
-    .br {
-      width: 25px;
-      height: 28px;
-      right: -11px;
-      bottom: 0;
-      background-position: bottom right;
-    }
 #sm2-container{
 	width:8px;
 	height:8px;
